--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IT CRON</title>
+  <link rel="stylesheet" type="text/css" href="/public/css/normalize.css" />
+  <link rel="stylesheet" type="text/css" href="/public/css/style.css" />
+
+  <meta property="og:title" content="IT CRON">
+  <meta property="og:description" content="IT CRON">
+  <meta property="og:image" content="https://example.com/image.jpg">
+  <meta property="og:url" content="https://example.com/">
 </head>
 <body>
-  
+  <header class="header">
+    <div class="header__rectangle">
+
+    </div>
+    <nav class="header__nav">
+      <ul class="header__nav--list">
+        <li class="header__nav--link"><a href="">Кейсы</a></li>
+        <li class="header__nav--link"><a href="">Компания</a></li>
+        <li class="header__nav--link"><a href="">Услуги</a></li>
+        <li class="header__nav--link"><a href="">Контакты</a></li>
+      </ul>
+    </nav>
+    <div class="header__menu">
+
+    </div>
+  </header>
 </body>
 </html>
