--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,7 @@
 </head>
 <body>
   <header class="header">
-    <div class="header__rectangle">
-
-    </div>
+    <div class="header__rectangle"></div>
     <nav class="header__nav">
       <ul class="header__nav--list">
         <li class="header__nav--link"><a href="">Кейсы</a></li>
@@ -26,8 +24,9 @@
         <li class="header__nav--link"><a href="">Контакты</a></li>
       </ul>
     </nav>
-    <div class="header__menu">
-
+    <div class="header__right"></div>
+    <div class="header__right-2">
+      <a href="#" class="header__right-2--menu"></a>
     </div>
   </header>
 </body>
