--- a/public/index.html
+++ b/public/index.html
@@ -29,5 +29,12 @@
       <a href="#" class="header__right-2--menu"></a>
     </div>
   </header>
+  <main class="main">
+    <section class="main__clock"></section>
+    <section class="main__text">
+      <h1 class="main__text--title">IT CRON</h1>
+      <p class="main__text--description">Проектно-продуктовый подход к оказанию IT-услуг</p>
+    </section>
+  </main>
 </body>
 </html>
