--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header class="header">
-    <div class="header__rectangle"></div>
+    <div class="header__squares"></div>
     <nav class="header__nav">
       <ul class="header__nav--list">
         <li class="header__nav--link"><a href="">Кейсы</a></li>
@@ -36,5 +36,17 @@
       <p class="main__text--description">Проектно-продуктовый подход к оказанию IT-услуг</p>
     </section>
   </main>
+  <footer class="footer">
+    <div class="footer__ellipse"></div>
+    <div class="footer__rectangle"></div>
+    <div class="footer__social-links">
+      <ul class="footer__social-links--list">
+        <li class="footer__social-links--link"><a href="#" class="facebook"></a></li>
+        <li class="footer__social-links--link"><a href="#" class="instagram"></a></li>
+        <li class="footer__social-links--link"><a href="#" class="linkedin"></a></li>
+        <li class="footer__social-links--link"><a href="#" class="telegram"></a></li>
+      </ul>
+    </div>
+  </footer>
 </body>
 </html>
