implemented animation on JS

--- a/public/index.html
+++ b/public/index.html
@@ -77,5 +77,11 @@
       </div>
     </footer>
   </div>
+
+  <div class="burger-menu">
+    <a href="" class="burger-menu--close">x</a>
+  </div>
+
+  <script src="./js/index.js"></script>
 </body>
 </html>
